--- a/public/less/forms.less
+++ b/public/less/forms.less
@@ -75,7 +75,9 @@ th.property {
 th.default {
     width : 310px;
 }
-
+.reportSettingsForm input {
+    text-align: right;
+}
 .reportSettingsForm .controls {
     text-align : right;
 }
